# wanna-watch

./: App.js  App.tsx  Dockerfile  README.md  app.json  firebase.json  firestore.rules  nginx.conf  package-lock.json  package.json  types.ts  vercel.json
.expo/: settings.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.vercel/: project.json
backend/: pyproject.toml
backend/src/: server.py
backend/src/services/: movie_fetcher.py
components/: MovieCard.tsx  SwipeCard.tsx
dataconnect/: dataconnect.yaml
dataconnect-generated/js/default-connector/: index.cjs.js
dataconnect-generated/js/default-connector/esm/: index.esm.js
frontend/: .firebaserc  App.js  app.json  package.json  webpack.config.js
frontend/config/: env.ts
functions/: package-lock.json
public/: index.html
scripts/: build-container.sh  run_container.sh  start.sh
src/: App.css  App.js
src/components/: YourComponent.js
src/firebase/: config.js
